--- a/article/article-app/src/main/resources/application.yml
+++ b/article/article-app/src/main/resources/application.yml
@@ -2,7 +2,9 @@ server:
   port: 8083
   servlet:
     context-path: /articleapi
-
+logging:
+  level:
+    root: info
 spring:
   devtools:
     restart:
